fix cdm updated wrapping

--- a/cdm.css
+++ b/cdm.css
@@ -23,6 +23,7 @@ div.cdmHeader span.updated {
 	color : gray;
 	font-weight : normal;
 	font-size : 11px;
+	white-space : nowrap;
 }
 
 div.cdmHeader input {
